[workspace]
resolver = "2"
members = ["examples/*", "hypertext", "hypertext-macros"]
default-members = ["hypertext", "hypertext-macros"]

[workspace.package]
version = "0.9.0"
authors = ["Vidhan Bhatt <me@vidhan.io>"]
edition = "2024"
description = "A blazing fast type-checked HTML macro crate."
readme = "README.md"
homepage = "https://github.com/vidhanio/hypertext"
repository = "https://github.com/vidhanio/hypertext"
license = "MIT"
keywords = ["html", "macro"]
categories = ["template-engine"]

[workspace.dependencies]
html-escape = { version = "0.2", default-features = false }
hypertext = { version = "0.9.0", path = "./hypertext" }
hypertext-macros = { version = "0.9.0", path = "./hypertext-macros" }

[workspace.lints]
[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_long_first_doc_paragraph = "allow"

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
unsafe_code = "forbid"

