[package]
name = "hypertext"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation = "https://docs.rs/hypertext"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[workspace]
resolver = "2"
members = [".", "examples/*", "macros"]
default-members = [".", "macros"]

[workspace.package]
version = "0.12.1"
authors = ["Vidhan Bhatt <me@vidhan.io>"]
edition = "2024"
description = "A blazing fast type-checked HTML macro crate."
readme = "README.md"
homepage = "https://github.com/vidhanio/hypertext"
repository = "https://github.com/vidhanio/hypertext"
license = "MIT"
keywords = ["html", "macro"]
categories = ["template-engine"]

[workspace.dependencies]
html-escape = { version = "0.2", default-features = false }
hypertext = { version = "0.12.1", path = "." }
hypertext-macros = { version = "0.12.1", path = "./macros" }

[workspace.lints]
[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_long_first_doc_paragraph = "allow"

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"

[dependencies]
actix-web = { version = "4", default-features = false, optional = true }
axum-core = { version = "0.5", default-features = false, optional = true }
html-escape = { workspace = true, optional = true }
hypertext-macros.workspace = true
itoa = { version = "1", optional = true }
ntex = { version = "2", default-features = false, optional = true }
poem = { version = "3", default-features = false, optional = true }
rocket = { version = "0.5", default-features = false, optional = true }
ryu = { version = "1", optional = true }
salvo_core = { version = "0.81", default-features = false, optional = true }
tide = { version = "0.16", default-features = false, optional = true }
warp = { version = "0.4", default-features = false, optional = true }

[features]
actix-web = ["alloc", "dep:actix-web"]
alloc = ["dep:html-escape", "dep:itoa", "dep:ryu"]
alpine = []
axum = ["alloc", "dep:axum-core"]
default = ["alloc"]
htmx = []
hyperscript = []
mathml = []
ntex = ["alloc", "dep:ntex"]
poem = ["alloc", "dep:poem"]
rocket = ["alloc", "dep:rocket"]
salvo = ["alloc", "dep:salvo_core"]
tide = ["alloc", "dep:tide"]
warp = ["alloc", "dep:warp"]

[lints]
workspace = true

