[package]
name = "hypertext-macros"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
html-escape.workspace = true
proc-macro2 = "1"
proc-macro2-diagnostics = { version = "0.10", default-features = false }
quote = "1"
rstml = { version = "0.12", default-features = false }
syn = "2"
