[package]
name = "hypertext"

authors.workspace = true
categories.workspace = true
description.workspace = true
documentation = "https://docs.rs/hypertext"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
hypertext-macros.workspace = true

html-escape = { workspace = true, optional = true }
itoa = { version = "1", optional = true }
ryu = { version = "1", optional = true }

actix-web = { version = "4", optional = true }
axum-core = { version = "0.4", optional = true }
http = { version = "1", optional = true }

[features]
default = ["alloc"]

alloc = ["dep:html-escape", "dep:itoa", "dep:ryu"]

axum = ["alloc", "dep:axum-core", "dep:http"]

actix = ["alloc", "dep:actix-web"]
