[package]
name = "hypertext"

authors.workspace = true
categories.workspace = true
description.workspace = true
documentation = "https://docs.rs/hypertext"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


    [package.metadata.docs.rs]
    all-features = true


[lints]
workspace = true

[dependencies]
hypertext-macros.workspace = true

html-escape = { workspace = true, optional = true }
itoa = { version = "1", optional = true }
ryu = { version = "1", optional = true }

actix-web = { version = "4", default-features = false, optional = true }
axum-core = { version = "0.5", default-features = false, optional = true }
http = { version = "1", default-features = false, optional = true }
hyper = { version = "0.14", default-features = false, optional = true }
poem = { version = "3", default-features = false, optional = true }
rocket = { version = "0.5", default-features = false, optional = true }
salvo_core = { version = "0.78", default-features = false, optional = true }
tide = { version = "0.16", default-features = false, optional = true }
warp = { version = "0.3", default-features = false, optional = true }

[features]
default = ["alloc"]

alloc = ["dep:html-escape", "dep:itoa", "dep:ryu"]

http = ["alloc", "dep:http"]

actix-web = ["alloc", "dep:actix-web"]
axum = ["alloc", "dep:axum-core", "http"]
poem = ["alloc", "dep:poem"]
rocket = ["alloc", "dep:rocket"]
salvo = ["alloc", "dep:salvo_core"]
tide = ["alloc", "dep:tide"]
warp = ["alloc", "dep:hyper", "dep:warp"]

alpine = []
htmx = []
hyperscript = []
