[package]
name = "hypertext"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation = "https://docs.rs/hypertext"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
actix-web = { version = "4", default-features = false, optional = true }
axum-core = { version = "0.5", default-features = false, optional = true }
html-escape = { workspace = true, optional = true }
http = { version = "1", default-features = false, optional = true }
hyper = { version = "0.14", default-features = false, optional = true }
hypertext-macros.workspace = true
itoa = { version = "1", optional = true }
ntex = { version = "2", default-features = false, optional = true }
poem = { version = "3", default-features = false, optional = true }
rocket = { version = "0.5", default-features = false, optional = true }
ryu = { version = "1", optional = true }
salvo_core = { version = "0.81", default-features = false, optional = true }
tide = { version = "0.16", default-features = false, optional = true }
warp = { version = "0.4", default-features = false, optional = true }

[features]
actix-web = ["alloc", "dep:actix-web"]
alloc = ["dep:html-escape", "dep:itoa", "dep:ryu"]
alpine = []
axum = ["alloc", "dep:axum-core", "dep:http"]
default = ["alloc"]
htmx = []
hyperscript = []
mathml = []
ntex = ["alloc", "dep:ntex"]
poem = ["alloc", "dep:poem"]
rocket = ["alloc", "dep:rocket"]
salvo = ["alloc", "dep:salvo_core"]
tide = ["alloc", "dep:tide"]
warp = ["alloc", "dep:hyper", "dep:warp"]

[lints]
workspace = true

