[package]
name = "hypertext-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation = "https://docs.rs/hypertext-macros"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
html-escape.workspace = true
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }

[lints]
workspace = true

