[package]
name = "hypertext-macros"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation = "https://docs.rs/hypertext-macros"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hypertext-proc-macros.workspace = true

[lints]
workspace = true
