[package]
name = "htmx-rsx"

license = "MIT"
edition = "2024"
publish = false
version = "0.1.0"

build = "build.rs"

[dependencies]
axum = "0.8"
axum-htmx = "0.7"
hypertext = { path = "../../hypertext", features = ["axum", "htmx"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
