[package]
name = "htmx-rsx"

edition.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-htmx = "0.7"
hypertext = { path = "../../hypertext", features = ["axum", "htmx"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
