[package]
name = "htmx-rsx"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = "0.8"
axum-htmx = "0.8"
hypertext = { workspace = true, features = ["axum", "htmx"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
